--- a/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
+++ b/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
@@ -11,7 +11,7 @@ This section describe how to install {prod-short} on the virtual link:https://ww
 
 Virtual clusters are fully working {kubernetes} clusters that run on top of other  {kubernetes} clusters. Compared to fully separate "real" clusters, virtual clusters reuse worker nodes and networking of the host cluster. They have their own control plane and schedule all workloads into a single namespace of the host cluster. Like virtual machines, virtual clusters partition a single physical cluster into multiple separate ones.
 
-`vClusters` offer a solution for deploying {prod-short} in scenarios where its installation would normally be impossible. This includes situations where the desired version of a {kubernetes} cluster is incompatible with {prod-short}, or when the Cloud Service Provider lacks support for external OIDC. Utilizing `vClusters` allows bypassing these constraints, enabling {prod-short} to function as needed.
+`vCluster` offers a solution for deploying {prod-short} in scenarios where it normally would be impossible. This includes situations where the desired version of a {kubernetes} cluster is incompatible with {prod-short}, or when the Cloud Service Provider lacks support for external OIDC. Utilizing `vClusters` allows bypassing these constraints and enables {prod-short} to function as needed.
 
 .Prerequisites
 
