--- a/modules/administration-guide/pages/configuring-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/configuring-microsoft-visual-studio-code.adoc
@@ -7,6 +7,6 @@
 [id="configuring-microsoft-visual-studio-code"]
 = Configuring Microsoft Visual Studio Code
 
-This section provides a detailed guide on how to configure Microsoft Visual Studio Code.
+Learn how to configure Microsoft Visual Studio Code.
 
 * xref:configuring-single-and-multiroot-workspaces.adoc[]
