--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -7,7 +7,7 @@
 [id="configuring-single-and-multiroot-workspaces"]
 = Configuring single and multi root workspaces
 
-Multi-root Workspaces is a feature in Microsoft Visual Studio Code that allows you to work with multiple project folders in the same workspace. This is useful when you are working on several related projects at once. For example, you might have a repository with a product's documentation and another with the product's code.
+With the multi-root workspace feature, you can work with multiple project folders in the same workspace. This is useful when you are working on several related projects at once, such as product documentation and product code repositories.
 
 [NOTE]
 ====
