--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -14,7 +14,7 @@ With the multi-root workspace feature, you can work with multiple project folder
 Starting with Dev Spaces 3.11, the workspace is set to open in multi-root mode by default.
 ====
 
-Once workspace is started, the `</projects/.code-workspace>` workspace file is generated. The workspace file will contain all the projects described in the Devfile.
+Once workspace is started, the `</projects/.code-workspace>` workspace file is generated. The workspace file will contain all the projects described in the devfile.
 ====
 [source,json]
 ----
