--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -36,7 +36,7 @@ Once workspace is started, the `</projects/.code-workspace>` workspace file is g
 If the workspace file already exist, it will be updated and all missing projects will be taken from the devfile.
 If you remove a project from the devfile, it will be left in the workspace file.
 
-You can change thee default behavior and provide your own workspace file or switch to the single-root workspace.
+You can change the default behavior and provide your own workspace file or switch to a single-root workspace.
 
 .Procedure
 
