--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -61,7 +61,7 @@ Then after workspace creation, the Microsoft Visual Studio Code will use the wor
 
 [IMPORTANT]
 ====
-Be careful when creating a file. In case of errors, an empty Microsoft Visual Studio Code will be opened.
+Be careful when creating a workspace file. In case of errors, an empty Microsoft Visual Studio Code project will open instead.
 ====
 
 [IMPORTANT]
