--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -40,12 +40,10 @@ You can change the default behavior and provide your own workspace file or switc
 
 .Procedure
 
-.1. Provide your own workspace file.
+* Provide your own workspace file.
 
-You can easily use your own workspace file. For that you need to name it `.code-workspace` and put it to the root of your repository. 
-Then after workspace creation, the Microsoft Visual Studio Code will use the workspace file as it is.
-
-====
+** Put a workspace file with the name `.code-workspace` into the root of your repository. After workspace creation, the Microsoft Visual Studio Code will use the workspace file as it is.
++
 [source,json]
 ----
 {
@@ -57,8 +55,7 @@ Then after workspace creation, the Microsoft Visual Studio Code will use the wor
 	]
 }
 ----
-====
-
++
 [IMPORTANT]
 ====
 Be careful when creating a workspace file. In case of errors, an empty Microsoft Visual Studio Code project will open instead.
