--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -67,19 +67,16 @@ In case you have several projects, the workspace file will be taken from the fir
 If the workspace file does not exist in the first project, a new one will be created and placed in the `/projects` directory. 
 ====
 
-.2. Specify alternative workspace file.
+* Specify alternative workspace file.
 
-You can open Microsoft Visual Studio Code specifying any workspace file on the file system.
-To do that you need to define __VSCODE_DEFAULT_WORKSPACE__ environment variable in your Devfile and specify the right location to the workspace file.
-
-====
+** Define the __VSCODE_DEFAULT_WORKSPACE__ environment variable in your devfile and specify the right location to the workspace file.
++
 [source,yaml]
 ----
    env:
      - name: VSCODE_DEFAULT_WORKSPACE
        value: "</projects/project-name/workspace-file>"
 ----
-====
 
 .3. Open a workspace in a single-root mode.
 
