--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -63,7 +63,7 @@ Be careful when creating a workspace file. In case of errors, an empty Microsoft
 
 [IMPORTANT]
 ====
-In case you have several projects, the workspace file will be taken from the first project.
+If you have several projects, the workspace file will be taken from the first project.
 If the workspace file does not exist in the first project, a new one will be created and placed in the `/projects` directory. 
 ====
 
