--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -78,16 +78,13 @@ If the workspace file does not exist in the first project, a new one will be cre
        value: "</projects/project-name/workspace-file>"
 ----
 
-.3. Open a workspace in a single-root mode.
+* Open a workspace in a single-root mode.
 
-You can open Microsoft Visual Studio Code in single-root mode.
-For that you need to define __VSCODE_DEFAULT_WORKSPACE__ environment variable and set it to the root.
-
-====
+** Define __VSCODE_DEFAULT_WORKSPACE__ environment variable and set it to the root.
++
 [source,yaml]
 ----
    env:
      - name: VSCODE_DEFAULT_WORKSPACE
        value: "</>"
 ----
-====
