docs: configuring multi and single root workspaces
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -15,7 +15,7 @@ Starting with {prod-short} 3.11, the workspace is set to open in multi-root mode
 ====
 
 Once workspace is started, the `</projects/.code-workspace>` workspace file is generated. The workspace file will contain all the projects described in the devfile.
-====
+
 [source,json]
 ----
 {
@@ -31,7 +31,6 @@ Once workspace is started, the `</projects/.code-workspace>` workspace file is g
 	]
 }
 ----
-====
 
 If the workspace file already exist, it will be updated and all missing projects will be taken from the devfile.
 If you remove a project from the devfile, it will be left in the workspace file.
@@ -58,7 +57,7 @@ You can change the default behavior and provide your own workspace file or switc
 +
 [IMPORTANT]
 ====
-Be careful when creating a workspace file. In case of errors, an empty Microsoft Visual Studio Code project will open instead.
+Be careful when creating a workspace file. In case of errors, an empty Microsoft Visual Studio Code will open instead.
 ====
 +
 [IMPORTANT]
