--- a/modules/administration-guide/pages/configuring-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/configuring-microsoft-visual-studio-code.adoc
@@ -9,4 +9,4 @@
 
 Learn how to configure Microsoft Visual Studio Code.
 
-* xref:configuring-single-and-multiroot-workspaces.adoc[1]
+* xref:configuring-single-and-multiroot-workspaces.adoc[]
