docs: configuring multi and single root workspaces
Signed-off-by: Vitaliy Gulyy <vgulyy@redhat.com>

--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -21,12 +21,12 @@ Once workspace is started, the `</projects/.code-workspace>` workspace file is g
 {
 	"folders": [
 		{
-			"name": "<project-1>",
-			"path": "</projects/project-1>"
+			"name": "project-1",
+			"path": "/projects/project-1"
 		},
 		{
-			"name": "<project-2>",
-			"path": "</projects/project-2>"
+			"name": "project-2",
+			"path": "/projects/project-2"
 		}
 	]
 }
@@ -41,14 +41,14 @@ You can change the default behavior and provide your own workspace file or switc
 
 * Provide your own workspace file.
 
-** Put a workspace file with the name `.code-workspace` into the root of your repository. After workspace creation, the Microsoft Visual Studio Code will use the workspace file as it is.
+** Put a workspace file with the name `.code-workspace` into the root of your repository. After workspace creation, the Visual Studio Code - Open Source ("Code - OSS") will use the workspace file as it is.
 +
 [source,json]
 ----
 {
 	"folders": [
 		{
-			"name": "<project-name>",
+			"name": "project-name",
 			"path": "."
 		}
 	]
@@ -57,7 +57,7 @@ You can change the default behavior and provide your own workspace file or switc
 +
 [IMPORTANT]
 ====
-Be careful when creating a workspace file. In case of errors, an empty Microsoft Visual Studio Code will open instead.
+Be careful when creating a workspace file. In case of errors, an empty Visual Studio Code - Open Source ("Code - OSS") will open instead.
 ====
 +
 [IMPORTANT]
@@ -74,7 +74,7 @@ If the workspace file does not exist in the first project, a new one will be cre
 ----
    env:
      - name: VSCODE_DEFAULT_WORKSPACE
-       value: "</projects/project-name/workspace-file>"
+       value: "/projects/project-name/workspace-file"
 ----
 
 * Open a workspace in a single-root mode.
@@ -85,5 +85,5 @@ If the workspace file does not exist in the first project, a new one will be cre
 ----
    env:
      - name: VSCODE_DEFAULT_WORKSPACE
-       value: "</>"
+       value: "/"
 ----
