--- a/modules/administration-guide/pages/configuring-microsoft-visual-studio-code.adoc
+++ b/modules/administration-guide/pages/configuring-microsoft-visual-studio-code.adoc
@@ -1,12 +1,12 @@
 :_content-type: CONCEPT
-:description: Configuring Microsoft Visual Studio Code
+:description: Configuring Visual Studio Code - Open Source ("Code - OSS")
 :keywords: vscode, workspace
-:navtitle: Configuring Microsoft Visual Studio Code
+:navtitle: Configuring Visual Studio Code - Open Source ("Code - OSS")
 //:page-aliases:
 
 [id="configuring-microsoft-visual-studio-code"]
-= Configuring Microsoft Visual Studio Code
+= Configuring Visual Studio Code - Open Source ("Code - OSS")
 
-Learn how to configure Microsoft Visual Studio Code.
+Learn how to configure Visual Studio Code - Open Source ("Code - OSS").
 
 * xref:configuring-single-and-multiroot-workspaces.adoc[]
