--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -9,9 +9,11 @@
 
 With the multi-root workspace feature, you can work with multiple project folders in the same workspace. This is useful when you are working on several related projects at once, such as product documentation and product code repositories.
 
+TIP: See link:https://code.visualstudio.com/docs/editor/workspaces[What is a VS Code "workspace"] for better understanding and authoring the workspace files.
+
 [NOTE]
 ====
-Starting with {prod-short} 3.11, the workspace is set to open in multi-root mode by default.
+Starting with {prod-short} 7.73.0, the workspace is set to open in multi-root mode by default.
 ====
 
 Once workspace is started, the `/projects/.code-workspace` workspace file is generated. The workspace file will contain all the projects described in the devfile.
