--- a/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
+++ b/modules/administration-guide/pages/configuring-single-and-multiroot-workspaces.adoc
@@ -13,7 +13,7 @@ TIP: See link:https://code.visualstudio.com/docs/editor/workspaces[What is a VS 
 
 [NOTE]
 ====
-Starting with {prod-short} 7.73.0, the workspace is set to open in multi-root mode by default.
+The workspace is set to open in multi-root mode by default.
 ====
 
 Once workspace is started, the `/projects/.code-workspace` workspace file is generated. The workspace file will contain all the projects described in the devfile.
