--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -85,6 +85,8 @@
 * xref:managing-ide-extensions.adoc[]
 ** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
 ** xref:trusted-extensions-for-microsoft-visual-studio-code.adoc[]
+* xref:configuring-visual-studio-code.adoc[]
+** xref:configuring-single-and-multiroot-workspaces.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
 * xref:upgrading-che.adoc[]
 ** xref:upgrading-the-chectl-management-tool.adoc[]
