chore: Restore installing image puller on openshift using cli
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
+++ b/modules/administration-guide/pages/caching-images-for-faster-workspace-start.adoc
@@ -22,6 +22,8 @@ therefore improving the workspace start time.
 
 * xref:installing-image-puller-on-openshift-by-using-the-web-console.adoc[]
 
+* xref:installing-image-puller-on-openshift-using-cli.adoc[]
+
 * xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
 
 * xref:configuring-image-puller-to-pre-pull-custom-images.adoc[]
