--- a/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
+++ b/modules/administration-guide/pages/installing-image-puller-on-openshift-using-cli.adoc
@@ -23,7 +23,7 @@ You can install the {image-puller-name} on OpenShift by using OpenShift `oc` man
 +
 When defining the minimal value for `CACHING_MEMORY_REQUEST` or `CACHING_MEMORY_LIMIT`, consider the necessary amount of memory required to run each of the container images to pull.
 +
-To define the maximal value for `CACHING_MEMORY_REQUEST` or `CACHING_MEMORY_LIMIT`, consider the total memory allocated to the DaemonSet Pods in the cluster:
+When defining the maximal value for `CACHING_MEMORY_REQUEST` or `CACHING_MEMORY_LIMIT`, consider the total memory allocated to the DaemonSet Pods in the cluster:
 +
 ----
 (memory limit) * (number of images) * (number of nodes in the cluster)
