feat: Adding a note with UBI recommendation
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -11,8 +11,14 @@ You do not need a devfile to start a workspace. If you do not include a devfile 
 
 .{prod-short} devfile registry
 
-link:https://github.com/eclipse-che/che-devfile-registry[{prod-short} devfile registry] contains ready-to-use devfiles for different languages and technologies.
- 
+link:https://github.com/eclipse-che/che-devfile-registry[{prod-short} devfile registry] contains ready-to-use devfiles for different 
+languages and technologies.
+
+[NOTE]
+====
+{prod} is expected to work with most of the popular images defined in the `components` section of devfile. For production purposes, it is recommended to use one of the link:https://catalog.redhat.com/software/containers/search?gs&q=ubi[Universal Base Images] as a base image for defining the Cloud Development Environment.
+====
+
 [NOTE]
 ====
 Devfiles included in the registry are specific to {prod} and should be treated as samples rather than templates. They might require updates to work with other versions of the components featured in the samples.
@@ -23,3 +29,4 @@ Devfiles included in the registry are specific to {prod} and should be treated a
 * link:https://devfile.io/docs/2.1.0/what-is-a-devfile[What is a devfile]
 * link:https://devfile.io/docs/2.1.0/benefits-of-devfile[Benefits of devfile]
 * link:https://devfile.io/docs/2.1.0/overview[Devfile customization overview]
+* link:https://che.eclipseprojects.io/2024/02/05/@mario.loriedo-cde-customization.html[Customizing Cloud Development Environments]
