feat: Updating Devfile registry to devfile.io
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -5,19 +5,19 @@ link:https://devfile.io/[Devfiles] are `yaml` text files used for development en
 
 .{prod}-specific devfile features
 
+[NOTE]
+====    
+{prod} is expected to work with most of the popular images defined in the `components` section of devfile. For production purposes, it is recommended to use one of the link:https://catalog.redhat.com/software/containers/search?gs&q=ubi[Universal Base Images] as a base image for defining the Cloud Development Environment.
+====
+
 .Devfile and Universal Developer Image
 
 You do not need a devfile to start a workspace. If you do not include a devfile in your project repository, {prod} automatically loads a default devfile with a Universal Developer Image (UDI).
 
-.{prod-short} devfile registry
+.Devfile Registry
 
-link:https://github.com/eclipse-che/che-devfile-registry[{prod-short} devfile registry] contains ready-to-use devfiles for different 
-languages and technologies.
+link:https://registry.devfile.io/viewer[{Devfile Registry] contains ready-to-use community-supported devfiles for different languages and technologies.
 
-[NOTE]
-====
-{prod} is expected to work with most of the popular images defined in the `components` section of devfile. For production purposes, it is recommended to use one of the link:https://catalog.redhat.com/software/containers/search?gs&q=ubi[Universal Base Images] as a base image for defining the Cloud Development Environment.
-====
 
 [NOTE]
 ====
