--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -16,17 +16,13 @@ You do not need a devfile to start a workspace. If you do not include a devfile 
 
 .Devfile Registry
 
-link:https://registry.devfile.io/viewer[{Devfile Registry] contains ready-to-use community-supported devfiles for different languages and technologies.
+link:https://registry.devfile.io/viewer[{Devfile Registry] contains ready-to-use community-supported devfiles for different languages and technologies. Devfiles included in the registry should be treated as samples rather than templates.
 
-
-[NOTE]
-====
-Devfiles included in the registry are specific to {prod} and should be treated as samples rather than templates. They might require updates to work with other versions of the components featured in the samples.
-====
 
 .Additional resources
 
 * link:https://devfile.io/docs/2.1.0/what-is-a-devfile[What is a devfile]
 * link:https://devfile.io/docs/2.1.0/benefits-of-devfile[Benefits of devfile]
 * link:https://devfile.io/docs/2.1.0/overview[Devfile customization overview]
+* link:https://devfile.io/[Devfile.io]
 * link:https://che.eclipseprojects.io/2024/02/05/@mario.loriedo-cde-customization.html[Customizing Cloud Development Environments]
