--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -46,6 +46,7 @@
 *** xref:configuring-a-user-namespace.adoc[]
 ** xref:caching-images-for-faster-workspace-start.adoc[]
 *** xref:installing-image-puller-on-kubernetes-by-using-cli.adoc[]
+*** xref:installing-image-puller-on-openshift-using-cli.adoc[]
 *** xref:installing-image-puller-on-openshift-by-using-the-web-console.adoc[]
 *** xref:configuring-image-puller-to-pre-pull-default-che-images.adoc[]
 *** xref:configuring-image-puller-to-pre-pull-custom-images.adoc[]
