--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -7,9 +7,19 @@
 [id="running-containers-with-kubedock"]
 = Running containers with kubedock
 
-Use link:https://github.com/joyrex2001/[kubedock] to run containers as Kubernetes pods.
-After enabling the kubedock environment variable,
-kubedock will run the following `podman` commands:
+Use link:https://github.com/joyrex2001/[kubedock] to run containers as {kubernetes} pods.
+
+link:https://github.com/joyrex2001/[Kubedock] is a minimal container engine implementation that gives you a podman- or docker-like experience inside a {prod-short} workspace. Kubedock is especially useful when you are dealing with ad-hoc, ephemeral and testing containers, such as in the use cases listed below:
+
+* Executing applications tests which rely on Testcontainers framework - kubedock will dynamically spin up required test container image , on the fly, as an OpenShift pod, giving user seamless experience.
+
+* Quarkus Dev Services - which are internally relying on Testcontainers as well.
+
+* When you are in need to you to run a container stored in remote container registry, for local development purposes and for whatever reasons you don't want to pollute the devfile . It's very important to mention (even though this is obvious!) that even though it gives you podman-like experience which you are used to from your local development environment, the absolute hard requirement is that the particular image which is being used via kubedock must be compatible with OpenShift. I specifically have security requirements in mind - i.e. not every container image which can be executed in your local machine, can also be executed on OpenShift. So if you do podman run - it will fail with kubedock, and it will work locally. (edited)
+
+.Enabling kubedock
+
+After enabling the kubedock environment variable, kubedock will run the following `podman` commands:
 
 * `podman run`
 * `podman ps`
@@ -32,12 +42,7 @@ Using kubedock has the following limitations:
 * The `podman build -t <image> . && podman run <image>` command will fail. Use `podman build -t <image> . && podman push <image> && podman run <image>` instead.
 * The `podman generate kube` command is not supported.
 * `--env` option causes the `podman run` command to fail.
-
-
-
-
-
-.Enabling kubedock
+====
 
 .Process
 . Add
