--- a/modules/end-user-guide/pages/devfile-introduction.adoc
+++ b/modules/end-user-guide/pages/devfile-introduction.adoc
@@ -10,6 +10,11 @@ link:https://devfile.io/[Devfiles] are `yaml` text files used for development en
 {prod} is expected to work with most of the popular images defined in the `components` section of devfile. For production purposes, it is recommended to use one of the link:https://catalog.redhat.com/software/containers/search?gs&q=ubi[Universal Base Images] as a base image for defining the Cloud Development Environment.
 ====
 
+[WARNING]
+===
+Some images can not be used as-is for defining Cloud Development Environment since Visual Studio Code - Open Source ("Code - OSS") can not be started in the containers with missing `openssl` and `libbrotli`. Missing libraries should be explicitly installed on the Dockerfile level e.g. `RUN yum install compat-openssl11 libbrotli`
+===
+
 .Devfile and Universal Developer Image
 
 You do not need a devfile to start a workspace. If you do not include a devfile in your project repository, {prod} automatically loads a default devfile with a Universal Developer Image (UDI).
