--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -24,3 +24,10 @@
 * `latest` is the stable version.
 * `next` is the development version.
 
+| link:https://github.com/redhat-developer/devspaces-gateway-plugin/[JetBrains IntelliJ IDEA Ultimate Edition (over JetBrains Gateway)]
+|
+* `che-incubator/che-idea-server/latest`
+* `che-incubator/che-idea-server/next`
+|
+* `latest` is the stable version.
+* `next` is the development version.
