Fix the errors reported by antora
Signed-off-by: Artem Zatsarynnyi <azatsary@redhat.com>

--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -1,7 +1,7 @@
 [id="idea-ultimate"]
 = JetBrains IntelliJ IDEA Ultimate Edition (over JetBrains Gateway)
 
-Eclipse Che supports conecting your local IntelliJ IDE to a running DevWorkspace.
+Eclipse Che supports connecting your local IntelliJ IDE to a running Che workspace.
 
 .Prerequisites
 
@@ -47,6 +47,6 @@ image::gateway-connect.png[Connecting to OpenShift API server,link="{imagesdir}/
 +
 image::gateway-select-ws.png[Connecting to OpenShift API server,link="{imagesdir}/gateway-select-ws.png"]
 
-Your local Gateway application will run the JetBrains Client and conect itto the workspace.
+Your local Gateway application will run the JetBrains Client and connect to the workspace.
 
 image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gateway-connecting.png"]
