--- a/modules/administration-guide/pages/running-containers-with-kubedock.adoc
+++ b/modules/administration-guide/pages/running-containers-with-kubedock.adoc
@@ -7,7 +7,7 @@
 [id="running-containers-with-kubedock"]
 = Running containers with kubedock
 
-link:https://github.com/joyrex2001/[Kubedock] is a minimal container engine implementation that gives you a podman-/docker-like experience inside a {prod-short} workspace. Kubedock is especially useful when you are dealing with ad-hoc, ephemeral, and testing containers, such as in the use cases listed below:
+link:https://github.com/joyrex2001/[Kubedock] is a minimal container engine implementation that gives you a Podman-/docker-like experience inside a {prod-short} workspace. Kubedock is especially useful when you are dealing with ad-hoc, ephemeral, and testing containers, such as in the use cases listed below:
 
 * Executing application tests which rely on link:https://testcontainers.com/[Testcontainers] framework.
 
@@ -37,7 +37,7 @@ After enabling the kubedock environment variable, kubedock will run the followin
 * `podman stop`
 * `podman start`
 
-Other commands such as `podman build` are started by the local podman instead.
+Other commands such as `podman build` are started by the local Podman instead.
 
 [IMPORTANT]
 ====
@@ -56,7 +56,7 @@ Using `podman` commands with kubedock has following limitations
 
 [NOTE]
 ====
-You must configure podman or docker API to point to kubedock setting
+You must configure Podman or docker API to point to kubedock setting
 `CONTAINER_HOST=tcp://127.0.0.1:2475` or `DOCKER_HOST=tcp://127.0.0.1:2475` when running containers.
-However, you must configure podman to point to local podman when building the container.
+However, you must configure Podman to point to local Podman when building the container.
 ====
