--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -1,7 +1,7 @@
 [id="idea-ultimate"]
 = JetBrains IntelliJ IDEA Ultimate Edition (over JetBrains Gateway)
 
-Eclipse Che supports connecting your local IntelliJ IDE to a running Che workspace.
+{prod} supports connecting your local IntelliJ IDE to a running {prod-short} workspace over JetBrains Gateway.
 
 .Prerequisites
 
