--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -5,7 +5,7 @@
 
 .Prerequisites
 
-. Install the JetBrains Gateway application from https://www.jetbrains.com/remote-development/gateway/
+. link:https://www.jetbrains.com/remote-development/gateway/[The JetBrains Gateway application] is installed.
 
 . Install the Gateway provider for OpenShift Dev Spaces from https://plugins.jetbrains.com/plugin/24234-openshift-dev-spaces
 
