--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -1,5 +1,5 @@
 [id="idea-ultimate"]
-= JetBrains IntelliJ IDEA Ultimate Edition (over JetBrains Gateway)
+= Connecting JetBrains IntelliJ IDEA Ultimate Edition to a {prod-short} workspace
 
 {prod} supports connecting your local IntelliJ IDE to a running {prod-short} workspace over JetBrains Gateway.
 
