--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -7,7 +7,7 @@
 
 . link:https://www.jetbrains.com/remote-development/gateway/[The JetBrains Gateway application] is installed.
 
-. Install the Gateway provider for OpenShift Dev Spaces from https://plugins.jetbrains.com/plugin/24234-openshift-dev-spaces
+. link:https://plugins.jetbrains.com/plugin/24234-openshift-dev-spaces[The Gateway provider for OpenShift Dev Spaces] is installed.
 
 . In your local terminal, log in to your OpenShift server with the OpenShift Client. `oc login` command establishes the authenticated session and saves the connection information to the configuration file which is read by the Gateway provider for OpenShift Dev Spaces.
 
