--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -9,7 +9,12 @@
 
 . link:https://plugins.jetbrains.com/plugin/24234-openshift-dev-spaces[The Gateway provider for OpenShift Dev Spaces] is installed.
 
-. In your local terminal, log in to your OpenShift server with the OpenShift Client. `oc login` command establishes the authenticated session and saves the connection information to the configuration file which is read by the Gateway provider for OpenShift Dev Spaces.
+. In your local terminal, you are logged in to your OpenShift server with the OpenShift Client.
++
+[NOTE]
+====
+The `oc login` command establishes the authenticated session and saves the connection information to the configuration file which is read by the Gateway provider for OpenShift Dev Spaces.
+====
 
 .Procedure of connecting to a new workspace
 
