--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -32,7 +32,7 @@ image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gatewa
 
 .Procedure of connecting to an existing workspace
 
-There are two options to connect to an already existing workspace:
+There are two options to connect the local IntelliJ IDE to an existing workspace:
 
 * from the Che Dashboard
 * from the Gateway application
