--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -37,7 +37,7 @@ There are two options to connect the local IntelliJ IDE to an existing workspace
 * from the Che Dashboard
 * from the Gateway application
 
-The simplest way to connect to an existing workspace is to start a workspace from the Che Dashboard and click the `Open Gateway` button.
+The simplest way to connect to an existing workspace is to start a workspace from the {prod-short} Dashboard and click the `Open Gateway` button.
 Another option to connect is using the Gateway application. It allows connecting without accessing the Che Dashboard.
 
 . Open the Gateway app and click `Connect to Dev Spaces`:
