--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -18,7 +18,7 @@ The `oc login` command establishes the authenticated session and saves the conne
 
 .Procedure of connecting to a new workspace
 
-. When creating your workspace on Che Dashboard, choose `IntelliJ IDEA Ultimate (desktop)` editor:
+. Create a workspace on the {prod-short} Dashboard and choose `IntelliJ IDEA Ultimate (desktop)` editor:
 +
 image::editor-idea-iu.png[IntelliJ IDEA Ultimate on Dashboard,link="{imagesdir}/editor-idea-iu.png"]
 
