--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -38,7 +38,7 @@ There are two options to connect the local IntelliJ IDE to an existing workspace
 * from the Gateway application
 
 The simplest way to connect to an existing workspace is to start a workspace from the {prod-short} Dashboard and click the `Open Gateway` button.
-Another option to connect is using the Gateway application. It allows connecting without accessing the Che Dashboard.
+However, with the Gateway application, you can connect the IntelliJ IDE to your workspace without accessing the {prod-short} Dashboard.
 
 . Open the Gateway app and click `Connect to Dev Spaces`:
 +
