--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -40,6 +40,8 @@ There are two options to connect the local IntelliJ IDE to an existing workspace
 The simplest way to connect to an existing workspace is to start a workspace from the {prod-short} Dashboard and click the `Open Gateway` button.
 However, with the Gateway application, you can connect the IntelliJ IDE to your workspace without accessing the {prod-short} Dashboard.
 
+.Procedure
+
 . Open the Gateway app and click `Connect to Dev Spaces`:
 +
 image::gateway.png[JetBrains Gateway main window,link="{imagesdir}/gateway.png"]
