--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -54,6 +54,9 @@ image::gateway-connect.png[Connecting to OpenShift API server,link="{imagesdir}/
 +
 image::gateway-select-ws.png[Connecting to OpenShift API server,link="{imagesdir}/gateway-select-ws.png"]
 
-Your local Gateway application will run the JetBrains Client and connect to the workspace.
+.Verification
+
+. Your local Gateway application is running the JetBrains Client and connects to the workspace.
++
 
 image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gateway-connecting.png"]
