Apply suggestions from code review
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/end-user-guide/pages/idea-ultimate.adoc
+++ b/modules/end-user-guide/pages/idea-ultimate.adoc
@@ -16,21 +16,23 @@
 The `oc login` command establishes the authenticated session and saves the connection information to the configuration file which is read by the Gateway provider for OpenShift Dev Spaces.
 ====
 
-.Procedure of connecting to a new workspace
+.Connecting JetBrains IntelliJ IDEA Ultimate Edition to a new workspace
+
+.Procedure
 
 . Create a workspace on the {prod-short} Dashboard and choose `IntelliJ IDEA Ultimate (desktop)` editor:
 +
 image::editor-idea-iu.png[IntelliJ IDEA Ultimate on Dashboard,link="{imagesdir}/editor-idea-iu.png"]
 
-. Once the workspace runs, the Dashboard will ask if you want to open your local JetBrains Gateway application:
+. Wait for the prompt to open your local JetBrains Gateway application to appear:
 +
 image::open-gateway-prompt.png[Open Gateway prompt,link="{imagesdir}/open-gateway-prompt.png"]
 
-Clicking the `Open Gateway` button will start your local JetBrains Client application connected to your Dev Spaces workspace:
+Click the `Open Gateway` button to start your local JetBrains Client application connected to your Dev Spaces workspace:
 
 image::gateway-connecting.png[Connecting to remote host,link="{imagesdir}/gateway-connecting.png"]
 
-.Procedure of connecting to an existing workspace
+.Connecting JetBrains IntelliJ IDEA Ultimate Edition to an existing workspace
 
 There are two options to connect the local IntelliJ IDE to an existing workspace:
 
