Source Shell Issue Fixes

--- a/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
+++ b/modules/administration-guide/pages/installing-che-on-the-virtual-kubernetes-cluster.adoc
@@ -669,15 +669,15 @@ EOF
 .Verification steps
 . Verify the {prod-short} instance status:
 +
-[subs="+attributes,+quotes"]
+[source,shell,subs="+attributes,"]
 ----
-$ {prod-cli} server:status
+{prod-cli} server:status
 ----
 
 . Navigate to the {prod-short} cluster instance:
 +
-[subs="+attributes,+quotes"]
+[source,shell,subs="+attributes,"]
 ----
-$ {prod-cli} dashboard:open
+{prod-cli} dashboard:open
 ----
 . Log in to the {prod-short} instance with *Username:* `che` and *Password:* `che`.
