fix: Broken links
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/examples/proc_che-installing-the-chectl-management-tool-on-linux-or-macos.adoc
+++ b/modules/administration-guide/examples/proc_che-installing-the-chectl-management-tool-on-linux-or-macos.adoc
@@ -19,7 +19,7 @@ This section describes how to install the `{prod-cli}` management tool on Linux 
 +
 [subs="+attributes"]
 ----
-$ bash <(curl -sL  https://www.eclipse.org/che/{prod-cli}/)
+$ bash <(curl -sL  https://che-incubator.github.io/{prod-cli}/install.sh)
 ----
 
 . Run the following command to verify that the `{prod-cli}` tool is available at `/usr/local/bin/{prod-cli}`:
