--- a/modules/administration-guide/examples/proc_che-installing-the-chectl-management-tool-on-windows.adoc
+++ b/modules/administration-guide/examples/proc_che-installing-the-chectl-management-tool-on-windows.adoc
@@ -13,7 +13,7 @@ This section describes how to install the `{prod-cli}` management tool on Window
 +
 [subs="+attributes"]
 ----
-C:\Users> Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://www.eclipse.org/che/{prod-cli}/win/'))
+C:\Users> Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://che-incubator.github.io/{prod-cli}/install.ps1'))
 ----
 
 .Verification steps
