--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -44,7 +44,7 @@ stringData:
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> This depends on the GitHub product your organization is using: When hosting repositories on GitHub.com or GitHub Enterprise Cloud, omit this line or enter the default `https://github.com`. When hosting repositories on GitHub Enterprise Server, enter the GitHub Enterprise Server URL.
-<3> If you are using GitHub Enterprise Server with disabled link:https://docs.github.com/en/enterprise-server/admin/configuration/hardening-security-for-your-enterprise/enabling-subdomain-isolation#about-subdomain-isolation[subdomain isolation] option, you must set the annotation to `true`, otherwise you can either omit the annotation, or set it to 'true'.
+<3> If you are using GitHub Enterprise Server with a disabled link:https://docs.github.com/en/enterprise-server/admin/configuration/hardening-security-for-your-enterprise/enabling-subdomain-isolation#about-subdomain-isolation[subdomain isolation] option, you must set the annotation to `true`, otherwise you can either omit the annotation or set it to `false`.
 <4> The *GitHub OAuth Client ID*.
 <5> The *GitHub OAuth Client Secret*.
 
