feat: How to configure custom editors definitions
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/administration-guide/pages/configuring-dashboard.adoc
+++ b/modules/administration-guide/pages/configuring-dashboard.adoc
@@ -9,5 +9,7 @@
 
 * xref:configuring-getting-started-samples.adoc[]
 
+* xref:configuring-editors-definitions.adoc[]
+
 * xref:customizing-openshift-che-consolelink-icon.adoc[]
 
