--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -71,6 +71,7 @@
 *** xref:configuring-storage-sizes.adoc[]
 ** xref:configuring-dashboard.adoc[]
 *** xref:configuring-getting-started-samples.adoc[]
+*** xref:configuring-editors-definitions.adoc[]
 *** xref:customizing-openshift-che-consolelink-icon.adoc[]
 ** xref:managing-identities-and-authorizations.adoc[]
 *** xref:configuring-oauth-for-git-providers.adoc[]
