--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -15,7 +15,7 @@ This procedure describes how to configure {prod-short} editors definitions.
 
 .Procedure
 
-. Create the `my-editor-definition-devfile.yaml` YAML file with editor definition configuration. Here are all the supported values, including optional ones:
+. Create the `my-editor-definition-devfile.yaml` YAML file with editor definition configuration. Ensure to provide the actual values for `publisher` and `version` under `metadata.attributes`. Below you can find the supported values, including optional ones:
 +
 [source,yaml,subs="+quotes,+attributes"]
 ----
@@ -24,21 +24,21 @@ schemaVersion: 2.2.2
 # Meta information of the editor
 metadata:
   # The name of the editor
-  name: Editor name
+  name: EditorName
   displayName: Display Name
   description: Run Editor Foo on top of Eclipse Che
   # (OPTIONAL) Array of tags of the current editor. Tech-Preview means it's considered experimental and is not recommended for production environments. While it can include new features and improvements, it may still contain bugs or undergo significant changes before reaching a stable version.
   tags:
     - Tech-Preview
-  # (OPTIONAL) Additional attributes
+  # Additional attributes
   attributes:
     title: This is my editor
     publisher: publisher
     version: version
     repository: https://github.com/editor/repository/
     firstPublicationDate: '2024-01-01'
-    icon-mediatype: image/svg+xml
-    icon-data: |
+    iconMediatype: image/svg+xml
+    iconData: |
       __<icon-content>__
 # List of editor components
 components:
