--- a/modules/administration-guide/pages/configuring-storage-sizes.adoc
+++ b/modules/administration-guide/pages/configuring-storage-sizes.adoc
@@ -61,7 +61,7 @@ pass:[<!-- vale RedHat.CaseSensitiveTerms = YES -->]
 
 [IMPORTANT]
 ====
-Manually modifying a PVC on the cluster that was provisioned by {prod-short} is not officially supported and may have unexpected consequences.
+Manually modifying a PVC on the cluster that was provisioned by {prod-short} is not officially supported and may result in unexpected consequences.
 
 If you want to resize a PVC, you have two options:
 
