chore: update release documentation
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/RELEASE.adoc
+++ b/RELEASE.adoc
@@ -13,9 +13,10 @@ The publication is decoupled. See link:https://github.com/eclipse-che/che-docs/t
 
 .Prerequisites
 
-* The new release is published on https://github.com/eclipse/che/releases and https://mattermost.eclipse.org/eclipse/channels/eclipse-che-releases.
+* Docs being released as part of the Eclipse Che Release cycle must have all previous steps to be completed.
+* All pending issues/PRs that must be included before the release must be resolved/merged.
 
-.Procedure
+.Procedure (steps performed in the xref:make-release.sh[`make-release.sh`] script)
 
 . From the `main` branch, open and merge a PR to `main` to update the Che version values in link:https://github.com/eclipse-che/che-docs/blob/main/antora.yml[`antora.yml`]:
 +
