--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -7,7 +7,7 @@
 [id="configuring-editors-definitions"]
 = Configuring editors definitions
 
-This procedure describes how to configure {prod-short} editors definitions.
+This procedure describes how to configure {prod-short} editor definitions.
 
 .Prerequisites
 
