--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -83,7 +83,7 @@ components:
       # Defines a container component as a "container contribution". If a flattened DevWorkspace has a container component with the merge-contribution attribute, then any container contributions are merged into that container component
       controller.devfile.io/container-contribution: true
     container:
-      # Can be dummy image because the compoent is expected to be injected into workspace dev component
+      # Can be a dummy image because the component is expected to be injected into workspace dev component
       image: quay.io/devfile/universal-developer-image:latest
       # (OPTIONAL) List of volumes mounts that should be mounted in this container
       volumeMounts:
