--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -89,7 +89,7 @@ components:
       volumeMounts:
           # The name of the mount
         - name: checode
-          # (OPTIONAL) The path in the component container where the volume should be mounted. If not path is mentioned, default path is the is /<name>
+          # (OPTIONAL) The path in the component container where the volume should be mounted. If no path is defined, the default path is the is /<name>
           path: /checode
       # (OPTIONAL) The memory limit of the container
       memoryLimit: 1024Mi
