--- a/modules/administration-guide/pages/configuring-editors-definitions.adoc
+++ b/modules/administration-guide/pages/configuring-editors-definitions.adoc
@@ -131,7 +131,7 @@ components:
     volume: {ephemeral: true}
 # (OPTIONAL) Bindings of commands to events. Each command is referred-to by its name
 events:
-  # IDs of commands that should be executed before the devworkspace start. This commands would typically be executed in init container
+  # IDs of commands that should be executed before the devworkspace start. These commands would typically be executed in an init container
   preStart:
     - init-container-command
   # IDs of commands that should be executed after the devworkspace is completely started. In the case of Che-Code, these commands should be executed after all plugins and extensions have started, including project cloning. This means that those commands are not triggered until the user opens the IDE in his browser
